# timp-lab05

./: CMakeLists.txt  README.md
banking/: CMakeLists.txt
tests/: test.cpp
